fix: jwt claim (#14)
* fix: jwt claim

* fix: bootcamp

* fix: swagger

* fix: access token

* test: logs

* fix: signing token

* fix: swagger page

* fix: update swagger
