# cmd/handlers/search_handler.go
@@ -14,9 +14,10 @@ import (
 
 // SearchHandler handles search requests
 // @Summary Search in Meilisearch
-// @Description Query Meilisearch and return results
+// @Description Query Meilisearch and return results. Valid index are "user", "resume", "blog", "session", "project", "study", "event", "stack"
 // @Tags search
 // @Accept json
+// @Security access_token
 // @Produce json
 // @Param index query string true "name of index"
 // @Param query query string true "Search query string"
@@ -139,6 +140,7 @@ func SearchHandler(c *gin.Context, counter *prometheus.CounterVec, histogram *pr
 // @Tags search
 // @Accept json
 // @Produce json
+// @Security access_token
 // @Param query query string true "Search query string"
 // @Param limit query int false "Number of results to return (default 10)"
 // @Param offset query int false "Offset for pagination (default 0)"
@@ -201,6 +203,7 @@ func BasicSearchHandler(c *gin.Context, counter *prometheus.CounterVec, histogra
 // @Tags search
 // @Accept json
 // @Produce json
+// @Security access_token
 // @Param query query string true "Search query string"
 // @Param limit query int false "Number of results to return (default 10)"
 // @Param offset query int false "Offset for pagination (default 0)"
