# docs/swagger.json
@@ -6,7 +6,12 @@
     "paths": {
         "/search": {
             "get": {
-                "description": "Query Meilisearch and return results",
+                "security": [
+                    {
+                        "access_token": []
+                    }
+                ],
+                "description": "Query Meilisearch and return results. Valid index are \"user\", \"resume\", \"blog\", \"session\", \"project\", \"study\", \"event\", \"stack\"",
                 "consumes": [
                     "application/json"
                 ],
@@ -79,6 +84,11 @@
         },
         "/search/basic": {
             "get": {
+                "security": [
+                    {
+                        "access_token": []
+                    }
+                ],
                 "description": "Query All Index in Meilisearch and return results",
                 "consumes": [
                     "application/json"
@@ -138,6 +148,11 @@
         },
         "/search/final": {
             "get": {
+                "security": [
+                    {
+                        "access_token": []
+                    }
+                ],
                 "description": "Query All Index in Meilisearch and return results",
                 "consumes": [
                     "application/json"
@@ -194,13 +209,6 @@
                     }
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "cookie": {
-            "type": "apiKey",
-            "name": "access_token",
-            "in": "cookie"
         }
     }
 }
